--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
     <div class="row">
       <div class="col-lg-5 col-xs-12 about-company">
         <h2>TiendaMusic.com</h2>
-        <p class="pr-5 text-white-50">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam ac ante mollis quam tristique convallis </p>
+        <p class="pr-5 text-white-50">Esta web es la primera que creo con previos conocimientos de html css y aprendiendo a usar herramientas como boostrap  </p>
       </div>
       <div class="col-lg-3 col-xs-12 links">
         <h4 class="mt-lg-0 mt-sm-3">Opening Hour</h4>
